--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -37,16 +37,46 @@
     font-size: 16px;
     font-weight: 700;
 }
+
 .footer__contact--button{
+    align-items: center;
     background: #2A7AE4;
-    border: none;
+    border: 1px solid #2A7AE4;
     color: #FFF;
     cursor: pointer;
+    display: flex;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
+    justify-content: center;
+    overflow: hidden;
     padding: 16px;
+    position: relative;
+    transition: 0.3s;
+    transition-delay: 0.3s;
     width: 144px;
+    z-index: 1;
 }
+
+.footer__contact--button::before{
+    background:#FFF;
+    border-radius: 50%;
+    content: "";
+    height: 200%;
+    position: absolute;
+    top: -100px;
+    transition: 0.3s;
+    width: 150%;
+    z-index: -1;
+}
+
+.footer__contact--button:hover {
+    color: #2A7AE4; 
+}
+  
+.footer__contact--button:hover::before {
+    top: -20px;
+} 
+
 
 .footer__logo{
     display: flex;
