--- a/views/home.hbs
+++ b/views/home.hbs
@@ -33,7 +33,7 @@
             <div class="card__container--description">
                 <img class="card__img" src="assets/img/cards/cards-mario/5678.jpg" alt="">
                 <h4>28 USD</h4>
-                <p>Figura de acción Bowser de 7 pulgadas.</p>
+                <p>Figura de acción Bowser de 7 pulgadas</p>
             </div>
           </a>
         </div>
@@ -77,7 +77,7 @@
           <a href="" class="card__container">
             <div class="card__container--description">
                 <img class="card__img" src="assets/img/cards/cards-mario/81jEBlaSWQL.jpg" alt="">
-                <h4>20 USD</h4>
+                <h4>22 USD</h4>
                 <p>Princesa Peach con paraguas</p>
             </div>
           </a>
