--- a/public/css/login.css
+++ b/public/css/login.css
@@ -20,6 +20,7 @@
     font-size: 18px;
     font-weight: 500;
     justify-content: center;
+    margin: 0 auto;
     overflow: hidden;
     padding:  12px 16px;
     position: relative;
@@ -49,7 +50,68 @@
     top: -20px;
 } 
 
-
+.input-container {
+    position: relative;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+  
+  .input {
+    padding: 1.375rem 0.5rem 0.5rem;
+    height: 3.25rem;
+    width: 100%;
+  }
+  
+  .input::placeholder {
+    visibility: hidden;
+    color: #00000000;
+  }
+  
+  .input:focus {
+    outline: none;
+  }
+  
+  .input-label {
+    position: absolute;
+    top: 1.375rem;
+    left: 0.5rem;
+    font-size: var(--font-size-input-label);
+  
+    transition: all 0.25s;
+  }
+  
+  .input:not(:placeholder-shown) + .input-label,
+  .input:focus + .input-label {
+    font-size: 0.875rem;
+    top: 0.25rem;
+    transition: all 0.25s;
+  }
+  
+  .input-container--invalid {
+    margin-bottom: 0.5rem;
+  }
+  
+  .input-container--invalid .input {
+    border: 1px solid var(--warning-color);
+    border-radius: 7px;
+  }
+  
+  .input-container--invalid .input-label {
+    color: var(--warning-color);
+  }
+  
+  .input-message-error {
+    display: none;
+  }
+  
+  .input-container--invalid .input-message-error {
+    color: var(--warning-color);
+    display: block;
+    margin-top: 0.5rem;
+    padding-left: 0.5rem;
+  }
 .login__container{
     align-items: center;
     display: flex;
@@ -57,27 +119,14 @@
     gap: 16px;
 }
 
-.login__input{
-    padding: 8px 12px;
-}
-
-.login__input--container{
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+.form{
     width: 275px;
-}
-
-.login__title{
-    color: #464646;
-    font-size: 16px;
-    font-weight: 700;
-    width: 105px;
 }
 
 
 @media screen and (min-width:768px) {
     .login__button{
+        margin: 0 auto;
         width: 109px;
     }
 
@@ -85,13 +134,9 @@
         gap: 16px;
     }
     
-    .login__input{
-        padding: 8px 12px
-    }
-    .login__input--container{
-        gap: 16px;
-        width: 275px;
-    }
+   .form{
+    width: 275px;
+   }
 }
 
 @media screen and (min-width:992px) {
@@ -104,16 +149,7 @@
         gap: 25px; 
     }
 
-    .login__input{
-        padding: 16px 12px;
-    }
-    .login__input--container{
-        gap: 25px;
+    .form{
         width: 423px;
-    }
-
-    .login__title{
-        font-size: 18px;
-        width: 131px;
     }
 }
