--- a/public/template/login.html
+++ b/public/template/login.html
@@ -10,12 +10,21 @@
     <section>
         <div class="login__container" id="login">
             <h1 class="login__title">Iniciar Sección</h1>
-            <div class="login__input--container">
-                <input class="login__input" type="email" placeholder="Escriba su correo electronico">
-                <input class="login__input" type="password" placeholder="Escriba su contraseña">
-            </div>
-            
-            <button class="login__button">Entrar</button>
+            <form action="">
+                <div class="login__input--container">
+                    <input name="email" id="email" type="email" class="login__input" placeholder="Escriba su correo electronico" required data-email="">
+                    <label class="input-label" for="email">Escriba su correo electronico</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+                <div class="login__input--container">
+                    <input name="password" id="password" type="password" class="login__input" placeholder="Escriba su contraseña" required data-password="">
+                    <label class="input-label" for="password">Escriba su contraseña</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+                
+                <button type="submit" class="login__button">Entrar</button>
+            </form>
+         
         </div>
     </section>
 </body>
