--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -39,3 +39,7 @@
 <script src="./js/carrusel.js"></script>
 <script src="./js/slick.js"></script>
 <script src="./js/slick.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="module" src="./controllers/registro-controller.js"></script>
+<script type="module" src="./services/lista-usuarios-service.js"></script>
