Agrego productos mario bros al home

--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -29,6 +29,8 @@
     border: 1px solid red;
     color: #464646;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
     height: 250px;
     padding: 5px;
     transition: 0.3s;
