--- a/views/add-products.hbs
+++ b/views/add-products.hbs
@@ -10,14 +10,16 @@
         <section class="add-products">
             <div class="add-products__container" id="login">
             <h1 class="add-products__title">Agregar nuevo producto</h1>
-            <form action="" class="add-products__input--container" data-form="">
+            <form action="" class="add-products__input--container" data-agregar-products="">
                 <input class="add-products__input" type="text" data-imgURL="" placeholder="URL de la imagen">
-                <input class="add-products__input" type="text" placeholder="Categoría">
+                <input class="add-products__input" type="text" data-categoria="" placeholder="Categoría">
                 <input class="add-products__input" type="text" data-name="" placeholder="Nombre del producto">
-                <input class="add-products__input" type="number" data-price="" placeholder="Precio del producto">
-                <input class="add-products__input" type="text" placeholder="Descripción del producto">
+                <input class="add-products__input" type="text" data-price="" placeholder="Precio del producto">
+                <input class="add-products__input" type="text" data-descripcion="" placeholder="Descripción del producto">
+
+                <button type="submit" class="add-products__button">Agregar producto</button>
             </form>
-            <button class="add-products__button">Agregar producto</button>
+            
         </div>
         </section>
     </main>
