--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,78 +18,12 @@
         <span class="container__title">Mario Bros</span>
         <a class="card__link" href="/products-mario_bros">Ver todo</a>
       </div>
-      <section class="your-class" data-mario_bros="">
-      
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/1234.jpg" alt="">
-            <h4>13 USD</h4>
-            <p>SATZIG 3 piezas de Mario Toys</p>
-            <a href="">Ver producto</a>
-        </div>
-          
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/5678.jpg" alt="">
-            <h4>28 USD</h4>
-            <p>Figura de acción Bowser de 7 pulgadas</p>
-            <a href="">Ver producto</a>
-        </div>
+
+      <section data-mario_bros>
+        <div>
+            
+        </div>        
         
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/71WHgAryJaL.jpg" alt="">
-            <h4>31 USD</h4>
-            <p>Paquete de 6 figuras de acción de Mario Toys</p>
-            <a href="">Ver producto</a>
-        </div>
-  
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/71+uiRV7lGL.jpg" alt="">
-            <h4>18 USD</h4>
-            <p>Figura de acción magikoopa con varita</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/51rB9mrzO5L.jpg" alt="">
-            <h4>14 USD</h4>
-            <p>Figura de acción Boo World of Nintendo</p>
-            <a href="">Ver producto</a>
-        </div>
-      
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/81CkgXlS8XL.jpg" alt="">
-            <h4>20 USD</h4>
-            <p>Radio juguete de largo alcance</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/81jEBlaSWQL.jpg" alt="">
-            <h4>20 USD</h4>
-            <p>Princesa Peach con paraguas</p>
-            <a href="">Ver producto</a>
-        </div>
-      
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/71LlfjTJiRL.jpg" alt="">
-            <h4>10 USD</h4>
-            <p>Figura de Mario Bros</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/61JDcd02yCL.jpg" alt="">
-            <h4>15 USD</h4>
-            <p>Yoshi con accesorio de sarten</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-mario/41CKAeCVJTL.jpg" alt="">
-            <h4>35 USD</h4>
-            <p>Bomba de juquete coleccionable</p>
-            <a href="">Ver producto</a>
-        </div>
-  
       </section>
 
 
