Agrego funcionalidad de ver todos los productos que se agregan al home, se puedan ver en otra pagina.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,10 +16,13 @@
     <main class="main__container">
        <div class="container__name">
         <span class="container__title">Mario Bros</span>
-        <a class="card__link" href="/products-mario_bros">Ver todo</a>
+        <button type="submit"> 
+             <a class="card__link" href="/products-mario_bros">Ver todo</a>
+        </button>
+       
       </div>
 
-      <section data-mario_bros>
+      <section data-mario_bros="">
         <div>
             
         </div>        
