--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -45,5 +45,9 @@
 <script type="module" src="./controllers/products-controller.js"></script>
 <script type="module" src="./controllers/crear-products-controller.js"></script>
 
+<script type="module" src="./controllers/edit-products.controller.js"></script>
+<script type="module" src="./controllers/edit-controller.js"></script>
+
+
 <script type="module" src="./services/lista-usuarios-service.js"></script>
 <script type="module" src="./services/products_mario-service.js"></script>
