--- a/views/products-mario_bros.hbs
+++ b/views/products-mario_bros.hbs
@@ -11,14 +11,14 @@
     <main class="main__container">
         <div class="container__name--products">
             <span class="container__title--products">Todos los productos</span>
-            <button class="products__button" type="submit">
+            <button class="products__button" type="submit" data-link="">
                 <a class="products__button--link" href="/add-products">Agregar producto
             </button>
             
         </div>
         <section class="grid__container" data-mario="">
 
-            <div class="card__container--position">
+            {{!-- <div class="card__container--position">
                 <img class="card__img" src="assets/img/cards/cards-mario/1234.jpg" alt="">
                 <div class="controls__comand">
                     <span class="controls__delete" >
@@ -31,9 +31,9 @@
                 </div>
                 <h4>13 USD</h4>
                 <p>SATZIG 3 piezas de Mario Toys</p>
-            </div>
+            </div> --}}
 
-            <div class="card__container--position">
+            {{!-- <div class="card__container--position">
                 <img class="card__img" src="assets/img/cards/cards-mario/5678.jpg" alt="">
                 <div class="controls__comand">
                     <span class="controls__delete" >
@@ -242,7 +242,7 @@
                 <h4>10 USD</h4>
                 <p>Peluche yoshi 7.6 pulgadas</p>
             </div>
-          
+           --}}
         </section>
 
     </main>
