--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -31,8 +31,9 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 250px;
-    padding: 5px;
+    padding: 8px;
     transition: 0.3s;
 } 
 
