--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,5 +1,9 @@
 .card__container--position{
     color: #464646;
+    display: flex;
+    flex-direction: column;
+    height: 250px;
+    justify-content: space-between;
     position: relative;
     text-decoration: none;
     transition: 0.3s;
@@ -27,6 +31,9 @@
 }
 
 .controls__delete{
+    background: transparent;
+    border: none;
+    cursor: pointer;
     transition: 0.5s;
 }
 
@@ -36,6 +43,9 @@
 }
 
 .controls__edit{
+    background: transparent;
+    border: none;
+    cursor: pointer;
     transition: 0.3s;
 }
 
