--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -15,4 +15,5 @@
     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="./css/products.css">
     <link rel="stylesheet" href="./css/add-products.css">
+    <link rel="stylesheet" href="./css/update-products.css">
 </head>
