--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -19,10 +19,12 @@
 }
 
 .card__link{
+    background: transparent;
+    border: none;
     color: #2A7AE4;
+    cursor: pointer;
     font-size: 16px;
     font-weight: 700;
-    text-decoration: none;
 }
 
 .card__container{
