--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,10 +16,11 @@
     <main class="main__container">
        <div class="container__name">
         <span class="container__title">Mario Bros</span>
-        <button type="submit"> 
-             <a class="card__link" href="/products-mario_bros">Ver todo</a>
-        </button>
-       
+
+        <a class="card__link" href="/products-mario_bros">
+            <button class="card__link" type="submit">Ver todo</button>
+        </a>
+        
       </div>
 
       <section data-mario_bros="">
