--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,22 +13,20 @@
         <div class="login__container" id="login">
             <h1 class="login__title">Iniciar Sección</h1>
 
-            <form  action="" class="form" data-form="">
-             <div class="input-container">
-                <input name="email" id="email" class="input" type="email" placeholder="Escriba su correo Electronico" required data-email="">
-                <label class="input-label" for="email">Escriba su correo Electronico</label>
-                <span class="input-message-error">Este campo no es valido</span>
-            </div>
-            <div class="input-container">
-                <input name="password" id="password" class="input" type="password" placeholder="Escriba su contraseña" required data-password="">
-                <label class="input-label" for="password">Escriba su contraseña</label>
-                <span class="input-message-error">Este campo no es valido</span>
-            </div>
-
-            <button type="submit" class="login__button">Entrar</button>
-
+            <form  action="" class="form__login" data-form="">
+                <div class="input-container">
+                    <input name="email" id="email" class="input" type="email" placeholder="Escriba su correo Electronico" required autofocus data-email="">
+                    <label class="input-label" for="email">Escriba su correo Electronico</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+                <div class="input-container">
+                    <input name="password" id="password" class="input" type="password" placeholder="Escriba su contraseña" required data-password="">
+                    <label class="input-label" for="password">Escriba su contraseña</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+                <button type="submit" class="login__button">Entrar</button>
             </form>
-            
+            <p>No tienes una cuenta? <a href="/singup">Registrate</a></p>
         </div>
     </section>
 
