--- a/views/products-mario_bros.hbs
+++ b/views/products-mario_bros.hbs
@@ -11,238 +11,14 @@
     <main class="main__container">
         <div class="container__name--products">
             <span class="container__title--products">Todos los productos</span>
-            <button class="products__button" type="submit" data-link="">
-                <a class="products__button--link" href="/add-products">Agregar producto
-            </button>
-            
+            <a class="products__button--link products__button" href="/add-products">
+                 <button class="products__button" type="submit" data-link="">Agregar producto</button>
+            </a>
+           
         </div>
         <section class="grid__container" data-mario="">
+           
 
-            {{!-- <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/1234.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>13 USD</h4>
-                <p>SATZIG 3 piezas de Mario Toys</p>
-            </div> --}}
-
-            {{!-- <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/5678.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                            <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>28 USD</h4>
-                <p>Figura de acción Bowser de 7 pulgadas.</p>
-            </div>
-            
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/71WHgAryJaL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>31 USD</h4>
-                <p>Paquete de 6 figuras de acción de Mario Toys</p>
-            </div>
-            
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/71+uiRV7lGL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>18 USD</h4>
-                <p>Figura de acción magikoopa con accesorio de varita</p>
-            </div>
-                  
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/51rB9mrzO5L.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>14 USD</h4>
-                <p>Figura de acción Boo World of Nintendo</p>
-            </div>
-        
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/81CkgXlS8XL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>20 USD</h4>
-                <p>Radio juguete de largo alcance</p>
-            </div>
-                
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/81jEBlaSWQL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>10 USD</h4>
-                <p>Princesa Peach con paraguas</p>
-            </div>
-        
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/71LlfjTJiRL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>10 USD</h4>
-                <p>Figura de Mario Bros</p>
-            </div>
-                
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/61JDcd02yCL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>15 USD</h4>
-                <p>Yoshi con accesorio de sarten</p>
-            </div>
-                
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/41CKAeCVJTL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>35 USD</h4>
-                <p>Bomba de juquete coleccionable</p>
-            </div>
-  
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/61w-X9AZ.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>19 USD</h4>
-                <p>Luz nocturna de ilusión</p>
-            </div>
-    
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/71W5posa5pL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>43 USD</h4>
-                <p>48 piezas de mini juguetes Mario Bros</p>
-            </div>
-    
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/51ZLlIuSGGL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>43 USD</h4>
-                <p>5 piezas de mini juguetes Mario Bros</p>
-            </div>
-    
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/71b3nnP-N0L.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>29 USD</h4>
-                <p>Peluche Mario y luigi</p>
-            </div>
-
-            <div class="card__container--position">
-                <img class="card__img" src="assets/img/cards/cards-mario/71JDoBk2CEL.jpg" alt="">
-                <div class="controls__comand">
-                    <span class="controls__delete" >
-                        <i class="icon-eliminar_negro_24dp-1-1"></i>
-                    </span>
-
-                    <span class="controls__edit" >
-                        <i class="icon-edit_black_24dp-1"></i>
-                    </span>
-                </div>
-                <h4>10 USD</h4>
-                <p>Peluche yoshi 7.6 pulgadas</p>
-            </div>
-           --}}
         </section>
 
     </main>
