--- a/views/update-products.hbs
+++ b/views/update-products.hbs
@@ -24,36 +24,35 @@
         <div class="add-products__container" id="login">
         <h1 class="add-products__title">Actualizar producto</h1>
 
-        <form action="" class="form">
+        <form action="" class="form" data-update="">
 
-        <div class="input-container">
-            <input name="url" id="url" class="input" type="text" placeholder="URL de la imagen" required data-email="">
-            <label class="input-label" for="url">URL de la imagen</label>
-            <span class="input-message-error">Este campo no es valido</span>
-        </div>
-        <div class="input-container">
-            <input name="categoria" id="categoria" class="input" type="text" placeholder="Categoria" required data-password="">
-            <label class="input-label" for="categoria">Categoria</label>
-            <span class="input-message-error">Este campo no es valido</span>
-        </div>
-        <div class="input-container">
-            <input name="name" id="name" class="input" type="text" placeholder="Nombre del producto" required data-password="">
-            <label class="input-label" for="name">Nombre del producto</label>
-            <span class="input-message-error">Este campo no es valido</span>
-        </div>
-        <div class="input-container">
-            <input name="precio" id="precio" class="input" type="text" placeholder="Precio de producto" required data-password="">
-            <label class="input-label" for="precio">Precio de producto</label>
-            <span class="input-message-error">Este campo no es valido</span>
-        </div>
-        <div class="input-container">
-            <input name="descripcion" id="descripcion" class="input" type="text" placeholder="Descripción" required data-password="">
-            <label class="input-label" for="descripcion">Descripción</label>
-            <span class="input-message-error">Este campo no es valido</span>
-        </div>
+            <div class="input-container">
+                <input name="imgURL" id="imgURL" class="input" type="text" placeholder="URL de la imagen" required data-imgURL="">
+                <label class="input-label" for="url">URL de la imagen</label>
+                <span class="input-message-error">Este campo no es valido</span>
+            </div>
+            <div class="input-container">
+                <input name="categoria" id="categoria" class="input" type="text" placeholder="Categoria" required data-categoria="">
+                <label class="input-label" for="categoria">Categoria</label>
+                <span class="input-message-error">Este campo no es valido</span>
+            </div>
+            <div class="input-container">
+                <input name="name" id="name" class="input" type="text" placeholder="Nombre del producto" required data-name="">
+                <label class="input-label" for="name">Nombre del producto</label>
+                <span class="input-message-error">Este campo no es valido</span>
+            </div>
+            <div class="input-container">
+                <input name="precio" id="precio" class="input" type="text" placeholder="Precio de producto" required data-price="">
+                <label class="input-label" for="precio">Precio de producto</label>
+                <span class="input-message-error">Este campo no es valido</span>
+            </div>
+            <div class="input-container">
+                <input name="descripcion" id="descripcion" class="input" type="text" placeholder="Descripción" required data-descripcion="">
+                <label class="input-label" for="descripcion">Descripción</label>
+                <span class="input-message-error">Este campo no es valido</span>
+            </div>
 
-        <button type="submit" class="form__button">Actualizar producto</button>
-
+            <button type="submit" class="form__button">Actualizar producto</button>
     </form>
 
     </section>
