--- a/public/css/login.css
+++ b/public/css/login.css
@@ -120,7 +120,7 @@
     gap: 16px;
 }
 
-.form{
+.form__login{
     width: 275px;
 }
 
@@ -135,7 +135,7 @@
         gap: 16px;
     }
     
-   .form{
+   .form__login{
     width: 275px;
    }
 }
@@ -150,7 +150,7 @@
         gap: 25px; 
     }
 
-    .form{
+    .form__login{
         width: 423px;
     }
 }
