--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,9 +1,11 @@
 .card__container--position{
+    border: 1px solid green;
     color: #464646;
     display: flex;
     flex-direction: column;
     height: 250px;
     justify-content: space-between;
+    padding: 5px;
     position: relative;
     text-decoration: none;
     transition: 0.3s;
@@ -43,9 +45,8 @@
 }
 
 .controls__edit{
-    background: transparent;
-    border: none;
     cursor: pointer;
+    text-decoration: none;
     transition: 0.3s;
 }
 
@@ -69,6 +70,8 @@
 .products__button{
     background: #2A7AE4;
     border: 1px solid #2A7AE4;
+    color: white;
+    cursor: pointer;
     padding: 12px 16px;
     transition: 0.3s;
     width: 150px;
