--- a/public/css/update-products.css
+++ b/public/css/update-products.css
@@ -87,6 +87,7 @@
 @media screen and (min-width:768px) {
     .navbar__button--general{
         padding: 12px 0;
+        order: 1;
         width: 144px;
     }
 
@@ -101,6 +102,7 @@
 
 @media screen and (min-width:992px) {
     .navbar__button--general{
+        order: 2;
         width: 183px;
     }
 
