--- a/views/add-products.hbs
+++ b/views/add-products.hbs
@@ -11,13 +11,37 @@
             <div class="add-products__container" id="login">
             <h1 class="add-products__title">Agregar nuevo producto</h1>
             <form action="" class="add-products__input--container" data-agregar-products="">
-                <input class="add-products__input" type="text" data-imgURL="" placeholder="URL de la imagen">
-                <input class="add-products__input" type="text" data-categoria="" placeholder="Categoría">
-                <input class="add-products__input" type="text" data-name="" placeholder="Nombre del producto">
-                <input class="add-products__input" type="text" data-price="" placeholder="Precio del producto">
-                <input class="add-products__input" type="text" data-descripcion="" placeholder="Descripción del producto">
+                <div class="input-container">
+                    <input name="imgURL" id="imgURL" class="input" type="text" placeholder="URL de la imagen" required data-imgURL="">
+                    <label class="input-label" for="url">URL de la imagen</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
 
-                <button type="submit" class="add-products__button">Agregar producto</button>
+                <div class="input-container">
+                    <input name="categoria" id="categoria" class="input" type="text" placeholder="Categoria" required data-categoria="">
+                    <label class="input-label" for="categoria">Categoria</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+
+                <div class="input-container">
+                    <input name="name" id="name" class="input" type="text" placeholder="Nombre del producto" required data-name="">
+                    <label class="input-label" for="name">Nombre del producto</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+
+                <div class="input-container">
+                    <input name="precio" id="precio" class="input" type="text" placeholder="Precio de producto" required data-price="">
+                    <label class="input-label" for="precio">Precio de producto</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+
+                <div class="input-container">
+                    <input name="descripcion" id="descripcion" class="input" type="text" placeholder="Descripción" required data-descripcion="">
+                    <label class="input-label" for="descripcion">Descripción</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+
+                <button type="submit" class="form__button">Agregar producto</button>
             </form>
             
         </div>
