--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -37,8 +37,8 @@
 
 
 <script type="module" src="./js/carrusel.js"></script>
-<script src="./js/slick.js"></script>
-<script src="./js/slick.min.js"></script>
+<script src="./assets/slick/slick.js"></script>
+<script src="./assets/slick/slick.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="module" src="./controllers/registro-controller.js"></script>
@@ -48,6 +48,10 @@
 <script type="module" src="./controllers/edit-products.controller.js"></script>
 <script type="module" src="./controllers/edit-controller.js"></script>
 
+<script type="module" src="./controllers/update-controller.js"></script>
+
 
 <script type="module" src="./services/lista-usuarios-service.js"></script>
 <script type="module" src="./services/products_mario-service.js"></script>
+
+<script type="module" src="./js/singup.js"></script>
